# meta-programming-knowledge-sharing

./: CMakeLists.txt  build.ps1  generate.ps1  get_symbols.ps1  run.ps1
example_1/: CMakeLists.txt
example_1/src/: Math.cpp  Math.h  Unit1.cpp  Unit2.cpp
example_2/src/: MyBase.h  MyChild.h  Unit1.cpp  Unit2.cpp
example_3/src/: Math.h  main.cpp
example_4a/src/: main.cpp
example_4b/src/: main.cpp
